force-app/main/default/objects/Entitlement_Override__c/Entitlement_Override__c.object-meta.xml
<CustomObject>
    <label>Entitlement Override</label>
    <pluralLabel>Entitlement Overrides</pluralLabel>
    <description>Entitlement Override</description>
    <nameField>
        <label>Entitlement Override Name</label>
        <type>AutoNumber</type>
        <displayFormat>EOV-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>