force-app/main/default/objects/Entitlement_Override__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entitlement Overrides</relationshipLabel>
    <relationshipName>Entitlement_Overrides</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
</CustomField>