force-app/main/default/objects/Entitlement_Override__c/fields/Response_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Response_Minutes__c</fullName>
    <label>Response Minutes</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>Response Minutes</description>
</CustomField>